--- a/EnviroNotify/Views/Shared/_Layout.cshtml
+++ b/EnviroNotify/Views/Shared/_Layout.cshtml
@@ -4,13 +4,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>EnviroNotify</title>
-    <link rel="manifest" href="manifest.json">    
+    <title>EnviroNotify - Stay Informed About Your Environment</title>
+    <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
-<h1>Page Title</h1>
+    @RenderBody()
 <script src="scripts.js"></script>
+@await RenderSectionAsync("Scripts", required: false)
 </body>
 
 </html>
+
