--- a/EnviroNotify.Dashboard/Views/Home/Index.cshtml
+++ b/EnviroNotify.Dashboard/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 <h1>Welcome to EnviroNotify!</h1>
-<p>Monitor and stay informed about the conditions in your room. EnviroNotify allows you to read and receive updates on humidity and temperature levels.</p>
+<p>Monitor and stay informed about the conditions in your room. EnviroNotify.Dashboard allows you to read and receive updates on humidity and temperature levels.</p>
 <div id="GiveAccess" style="display:none;">
     Give access to making notifications:
     <button id="PromptForAccessBtn">Prompt</button>
