--- a/EnviroNotify.Dashboard/Views/Shared/_Layout.cshtml
+++ b/EnviroNotify.Dashboard/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>EnviroNotify - Stay Informed About Your Environment</title>
+    <title>EnviroNotify.Dashboard - Stay Informed About Your Environment</title>
     <link rel="manifest" href="manifest.json">
 </head>
 
