--- a/EnviroNotify.Dashboard/Views/Home/Index.cshtml
+++ b/EnviroNotify.Dashboard/Views/Home/Index.cshtml
@@ -1,86 +1,27 @@
-<h1>Welcome to EnviroNotify!</h1>
-<p>Monitor and stay informed about the conditions in your room. EnviroNotify.Dashboard allows you to read and receive updates on humidity and temperature levels.</p>
-<div id="GiveAccess" style="display:none;">
-    Give access to making notifications:
-    <button id="PromptForAccessBtn">Prompt</button>
-</div>
-<div id="NoSupport" style="display:none;">
-    Your browser does not support push notifications or you have blocked notifications.
-</div>
-<form method="post" asp-action="Index" id="form" style="display:none;">
-    <input id="endpoint" name="endpoint" hidden />
-    <input id="p256dh" name="p256dh" hidden />
-    <input id="auth" name="auth" hidden />
+@model List<EnviroNotify.Dashboard.Models.IndexViewModel>
 
-    <button type="submit">Subscribe</button>
-</form>
-
-@section Scripts {
-    <script>
-        if ('serviceWorker' in navigator) {
-            window.addEventListener("load", function() {
-                navigator.serviceWorker.register("/ServiceWorker.js")
-                    .then(function(reg) {
-                        if (Notification.permission === "granted") {
-                            document.getElementById("form").style.display = "block";
-                            getSubscription(reg);
-                        } else if (Notification.permission === "blocked") {
-                            document.getElementById("NoSupport").style.display = "block";
-                        } else {
-                            document.getElementById("GiveAccess").style.display = "block";
-                            document.getElementById("PromptForAccessBtn").addEventListener("click", function() {
-                                requestNotificationAccess(reg);
-                            });
-                        }
-                    });
-            });
-        } else {
-            document.getElementById("NoSupport").style.display = "block";
-        }
-
-        function requestNotificationAccess(reg) {
-            Notification.requestPermission(function (status) {
-                document.getElementById("GiveAccess").style.display = "none";
-                if (status == "granted") {
-                    document.getElementById("form").style.display = "block";
-                    getSubscription(reg);
-                } else {
-                    document.getElementById("NoSupport").style.display = "block";
-                }
-            });
-        }
-
-        function getSubscription(reg) {
-            reg.pushManager.getSubscription().then(function (sub) {
-                if (sub === null) {
-                    reg.pushManager.subscribe({
-                        userVisibleOnly: true,
-                        applicationServerKey: "@ViewBag.ApplicationServerKey"
-                    }).then(function (sub) {
-                        fillSubscribeFields(sub);
-                    }).catch(function (e) {
-                        console.error("Unable to subscribe to push", e);
-                    });
-                } else {
-                    fillSubscribeFields(sub);
-                }
-            });
-        }
-
-        function fillSubscribeFields(sub) {
-            document.getElementById("endpoint").value = sub.endpoint;
-            document.getElementById("p256dh").value = arrayBufferToBase64(sub.getKey("p256dh"));
-            document.getElementById("auth").value = arrayBufferToBase64(sub.getKey("auth"));
-        }
-
-        function arrayBufferToBase64(buffer) {
-            let binary = '';
-            let bytes = new Uint8Array(buffer);
-            let len = bytes.byteLength;
-            for (let i = 0; i < len; i++) {
-                binary += String.fromCharCode(bytes[i]);
-            }
-            return window.btoa(binary);
-        }
-    </script>
+@{
+    Layout = "_Layout";
 }
+
+<ejs-chart id="container" title="Humidity">
+    <e-chart-primaryxaxis valueType="DateTimeCategory" intervalType="Hours"></e-chart-primaryxaxis>
+    <e-chart-tooltipsettings enable="true" header="Humidity" format="<b>${point.x} : ${point.y}%</b>"></e-chart-tooltipsettings>
+    <e-series-collection>
+        <e-series dataSource="@Model" name="Humidity" xName="DateTime" width="2" opacity="1" yName="Humidity" type="@Syncfusion.EJ2.Charts.ChartSeriesType.Line">
+            <e-series-marker visible="true" shape="Circle"></e-series-marker>
+        </e-series>
+    </e-series-collection>
+</ejs-chart>
+
+<ejs-chart id="container2" title="Temperature">
+    <e-chart-primaryxaxis valueType="DateTimeCategory" intervalType="Hours"></e-chart-primaryxaxis>
+    <e-chart-primaryyaxis valueType="Double" labelFormat="0.0"></e-chart-primaryyaxis>
+    <e-chart-tooltipsettings enable="true" header="Temperature" format="<b>${point.x} : ${point.y}C</b>"></e-chart-tooltipsettings>
+    <e-series-collection>
+        <e-series dataSource="@Model" name="Temperature" xName="DateTime" width="2" opacity="1" yName="Temperature" type="@Syncfusion.EJ2.Charts.ChartSeriesType.Line">
+            <e-series-marker visible="true" shape="Circle"></e-series-marker>
+        </e-series>
+    </e-series-collection>
+</ejs-chart>
+
