--- a/EnviroNotify.Dashboard/Views/Shared/_Layout.cshtml
+++ b/EnviroNotify.Dashboard/Views/Shared/_Layout.cshtml
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>EnviroNotify - Stay Informed About Your Environment</title>
     <link rel="manifest" href="manifest.json">
-    <link rel="stylesheet" href="https://cdn.syncfusion.com/ej2/24.1.41/material.css" />
-    <script src="https://cdn.syncfusion.com/ej2/24.1.41/dist/ej2.min.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body>
