--- a/EnviroNotify.Dashboard/Views/Shared/_Layout.cshtml
+++ b/EnviroNotify.Dashboard/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
         <li class="nav-item">
           <a class="nav-link" asp-controller="Home" asp-action="Subscribe">Subscribe</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/hangfire">Hangfire</a>
+        </li>
       </ul>
     </div>
   </div>
