--- a/EnviroNotify.Dashboard/wwwroot/css/styles.css
+++ b/EnviroNotify.Dashboard/wwwroot/css/styles.css
@@ -1,5 +1,10 @@
 .chart-box {
-    width: 50%;
+    @media screen and (min-width: 1200px) {
+        width: 50%;
+    }
+
+    width: 100%;
+    margin-bottom: 10px;
 }
 
 .chart-container {
