--- a/EnviroNotify.Dashboard/Views/Shared/_Layout.cshtml
+++ b/EnviroNotify.Dashboard/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" asp-controller="Home" asp-action="Index">
-      <img src="images/icon-48x48.png" alt="logo">
+      <img src="/images/icon-48x48.png" alt="logo">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
